# extract_camiones

./: .gitignore  307-xxxxx_para_rellenar.xlsx  OT_final.xlsx  README.md  RELEASE_WORKFLOW.md  TREE.md  extract_balanzas_qwen.py  extract_camiones_01_deepseek.py  extract_camiones_02_deepseek.py  extract_camiones_gui.py  fill_identificacion.py  metroweb_scraper_limpio.py  pyproject.toml  requirements.txt  selectors.yaml  tmp_prueba.xlsx
.github/: copilot-instructions.md
assets/: plantilla_camion.xlsx
maps/: fill_identificacion_gui.py  identificacion.yml
notebooks/: extraccion_de_precintos_25.ipynb
old_scripts/: extract_camiones.py  extract_camiones_01_cosola.py  extract_camiones_1.py
src/: cli.py  version.py
src/domain/: address.py  models.py
src/io/: excel_exporter.py
src/portal/: scraper.py
src/ui/: excel_merge.py  gui.py
tests/: conftest.py  test_excel_export.py  test_gui_export.py  test_helpers.py  test_integration_playwright.py
tools/: bump_version.py  make_release.py  shrink_balanza.py
