[project]
name = "extract_camiones"
version = "0.4.16"
description = "Extractor de datos MetroWeb → Excel (INTI)"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN101"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"
